<resources>
    <string name="app_name" translatable="false">Mini-Jeu Calcul</string>
    <string name="text_bouton_Jouer" translatable="false">Jouer</string>
    <string name="text_bouton_scores" translatable="false">Voir les scores</string>
    <string name="text_bouton_Propos" translatable="false">A Propos</string>
    <string name="text_bouton_zéro" translatable="false">0</string>
    <string name="text_bouton_un" translatable="false">1</string>
    <string name="text_bouton_deux" translatable="false">2</string>
    <string name="text_bouton_trois" translatable="false">3</string>
    <string name="text_bouton_quatre" translatable="false">4</string>
    <string name="text_bouton_cinq" translatable="false">5</string>
    <string name="text_bouton_six" translatable="false">6</string>
    <string name="text_bouton_sept" translatable="false">7</string>
    <string name="text_bouton_huit" translatable="false">8</string>
    <string name="text_bouton_neuf" translatable="false">9</string>
    <string name="text_bouton_effacer" translatable="false">Effacer</string>
    <string name="text_bouton_valider" translatable="false">Valider</string>
    <string name="ERROR_NUMBER_TOO_HIGH" translatable="false">Nombre trop grand</string>
    <string name="vie">Vies: 3</string>
    <string name="score">Score: 0</string>
</resources>